--- a/Hotel Management System Winforrm.csproj
+++ b/Hotel Management System Winforrm.csproj
@@ -223,6 +223,12 @@
     <Compile Include="QuanLyPhong.cs" />
     <Compile Include="QuanLyTaiKhoan.cs" />
     <Compile Include="QuanLyTraPhong.cs" />
+    <Compile Include="QuenMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuenMatKhau.Designer.cs">
+      <DependentUpon>QuenMatKhau.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="ThongTinDatPhong.cs" />
     <Compile Include="ThuePhong.cs" />
@@ -282,6 +288,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QuenMatKhau.resx">
+      <DependentUpon>QuenMatKhau.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Report1.rdlc" />
     <None Include="DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
